Update DS_and_ML.ipynb file

--- a/DS_and_ML.ipynb
+++ b/DS_and_ML.ipynb
@@ -56,7 +56,16 @@
     "dfs_to_concat = []\n",
     "\n",
     "df = (\n",
-    "    df\n",
+    "    pd.read_csv(\n",
+    "        \"file_name.csv\",\n",
+    "        header=\"infer\",\n",
+    "        sep=\";\",\n",
+    "        encoding=\"None\",\n",
+    "        on_bad_lines=\"skip\",\n",
+    "        usecols=[\"col_1\", \"col_2\"],\n",
+    "        thousands=None,\n",
+    "        decimal=\".\"\n",
+    "    )\n",
     "    .head()\n",
     "    .iloc[:-3, :-1]\n",
     "    .query(\"date < 20200101\")\n",
@@ -66,7 +75,8 @@
     "    .query(\"col.str.contains('cel_name', case=True)\")\n",
     "    .reset_index(drop=False)\n",
     "    .set_index([\"index_1_col\", \"index_2_col\"])\n",
-    "    .melt(id_vars=[\"code\"])\n",
+    "    .melt(id_vars=[\"col_1\"])\n",
+    "    .pivot_table(index=\"col_1\", columns=\"col_2\", values=\"col_3\", aggfunc=np.sum, fill_value=0)\n",
     "    .explode(\"col\")\n",
     "    .value_counts(ascending=False, normalize=False)\n",
     "    .to_frame()\n",
@@ -78,7 +88,7 @@
     "        lambda row: len(row))\n",
     "    )\n",
     "    .sort_values([\"date\"])\n",
-    "    .join(df_iema, how=\"outer\")\n",
+    "    .join(df, how=\"outer\")\n",
     "    .resample(\"1D\")\n",
     "    .groupby(pd.Grouper(key=\"date\", freq=\"1W\"))\n",
     "    .mean()\n",
