--- a/DS_and_ML.ipynb
+++ b/DS_and_ML.ipynb
@@ -52,10 +52,18 @@
    "source": [
     "\n",
     "import pandas as pd\n",
+    "from datetime import date\n",
     "\n",
     "dfs_to_concat = []\n",
     "\n",
     "df = (\n",
+    "    pd.concat(\n",
+    "        [\n",
+    "            df_1,\n",
+    "            df_2\n",
+    "        ],\n",
+    "        axis=1\n",
+    "    ),\n",
     "    pd.read_csv(\n",
     "        \"file_name.csv\",\n",
     "        header=\"infer\",\n",
@@ -69,24 +77,29 @@
     "    .head()\n",
     "    .iloc[:-3, :-1]\n",
     "    .query(\"date < 20200101\")\n",
+    "    .query(\"date != @date.today()\")\n",
     "    .query(\"name == 'cel_name'\")\n",
     "    .query(\"`name with space` == 'cel_name'\")\n",
     "    .query(\"name == @my_variable\")\n",
     "    .query(\"col.str.contains('cel_name', case=True)\")\n",
     "    .reset_index(drop=False)\n",
     "    .set_index([\"index_1_col\", \"index_2_col\"])\n",
-    "    .melt(id_vars=[\"col_1\"])\n",
-    "    .pivot_table(index=\"col_1\", columns=\"col_2\", values=\"col_3\", aggfunc=np.sum, fill_value=0)\n",
+    "    .melt(id_vars=[\"col_1\"]) # https://stackoverflow.com/questions/28654047/convert-columns-into-rows-with-pandas\n",
+    "    .pivot_table(index=\"col_1\", columns=\"col_2\", values=\"col_3\", aggfunc=np.sum, fill_value=0) # https://stackoverflow.com/questions/22127569/opposite-of-melt-in-python-pandas\n",
+    "    .rename_axis(columns=None)\n",
     "    .explode(\"col\")\n",
     "    .value_counts(ascending=False, normalize=False)\n",
     "    .to_frame()\n",
     "    .droplevel(0, axis=1)\n",
     "    .unstack()\n",
     "    .sort_index()\n",
-    "    .assign(date = lambda df: pd.to_datetime(df[\"date\"], format=\"%d/%m/%Y\", errors=\"coerce\" ))\n",
+    "    .assign(date = lambda df: pd.to_datetime(df[\"date\"], format=\"%d/%m/%Y\", errors=\"coerce\"))\n",
+    "    .assign(date=lambda df: pd.to_datetime(df[\"date\"]).dt.to_period(\"M\").dt.to_timestamp()) # Drops the day info\n",
+    "    .assign(date = lambda df: df[\"date\"].astype(str))\n",
     "    .assign(new_col = lambda df: df[\"col\"].apply(\n",
     "        lambda row: len(row))\n",
     "    )\n",
+    "    .assign(**{col_as_variable : lambda df: df[col].shift(i)})\n",
     "    .sort_values([\"date\"])\n",
     "    .join(df, how=\"outer\")\n",
     "    .resample(\"1D\")\n",
@@ -114,7 +127,9 @@
     "\n",
     "dfs_to_concat.append(df_to_concat)\n",
     "\n",
-    "dfs_concatenated = pd.concat(dfs_to_concat, axis=0, ignore_index=True)"
+    "dfs_concatenated = pd.concat(dfs_to_concat, axis=0, ignore_index=True)\n",
+    "\n",
+    "pd.json_normalize(df[\"col\"]) # https://stackoverflow.com/questions/38231591/split-explode-a-column-of-dictionaries-into-separate-columns-with-pandas"
    ]
   },
   {
@@ -134,29 +149,41 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "fig = go.Figure()\n",
+    "fig = make_subplots(\n",
+    "    rows=2,\n",
+    "    cols=2\n",
+    ")\n",
     "\n",
     "# https://plotly.com/python/reference/scatter/\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=df[\"date_col\"],\n",
-    "    y=df[\"another_col_1\"],\n",
-    "    name=\"Line Name\",\n",
-    "    line={\n",
-    "        \"width\": 5,\n",
-    "        \"dash\": \"dash\",\n",
-    "        \"color\": \"black\"\n",
-    "    }\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(\n",
+    "        x=df[\"date_col\"],\n",
+    "        y=df[\"another_col_1\"],\n",
+    "        name=\"Line Name\",\n",
+    "        line={\n",
+    "            \"width\": 5,\n",
+    "            \"dash\": \"dash\",\n",
+    "            \"color\": \"black\"\n",
+    "        }\n",
+    "    )\n",
+    "    row=i+1,\n",
+    "    col=1\n",
+    ")\n",
     "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=df[\"date_col\"],\n",
-    "    y=df[\"another_col_2\"],\n",
-    "    name=\"Line Name\",\n",
-    "    line={\n",
-    "        \"width\": 5,\n",
-    "        \"dash\": \"dot\",\n",
-    "        \"color\": \"green\"\n",
-    "    }\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(\n",
+    "        x=df[\"date_col\"],\n",
+    "        y=df[\"another_col_2\"],\n",
+    "        name=\"Line Name\",\n",
+    "        line={\n",
+    "            \"width\": 5,\n",
+    "            \"dash\": \"dot\",\n",
+    "            \"color\": \"green\"\n",
+    "        }\n",
+    "    )\n",
+    "    row=i+1,\n",
+    "    col=1\n",
+    ")\n",
     "\n",
     "# https://plotly.com/python/reference/layout/\n",
     "fig.update_layout({\n",
@@ -173,7 +200,35 @@
     "    \"height\": 600\n",
     "})\n",
     "\n",
-    "fig.show()"
+    "fig.update_xaxes(\n",
+    "    range=[\n",
+    "        df[\"date\"].min(),\n",
+    "        df[\"date\"].max()\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataBricks database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pandas = (\n",
+    "    %sql\n",
+    "    SELECT * FROM db_transformacao_digital.my_table\n",
+    ").DataFrame()\n",
+    "\n",
+    "import delta\n",
+    "delta.write_delta(df_pandas, \"db_transformacao_digital.my_table\", overwrite=True)"
    ]
   }
  ],
