--- a/Data Scientist/DS_and_ML.ipynb
+++ b/Data Scientist/DS_and_ML.ipynb
@@ -82,6 +82,8 @@
     "    .query(\"`name with space` == 'cel_name'\")\n",
     "    .query(\"name == @my_variable\")\n",
     "    .query(\"col.str.contains('cel_name', case=True)\")\n",
+    "    .query(\"index in @list_of_indices\")\n",
+    "    .query(\"columns in @list_of_columns\")\n",
     "    .reset_index(drop=False)\n",
     "    .set_index([\"index_1_col\", \"index_2_col\"])\n",
     "    .melt(id_vars=[\"col_1\"]) # https://stackoverflow.com/questions/28654047/convert-columns-into-rows-with-pandas\n",
@@ -94,7 +96,7 @@
     "    .unstack()\n",
     "    .sort_index()\n",
     "    .assign(date = lambda df: pd.to_datetime(df[\"date\"], format=\"%d/%m/%Y\", errors=\"coerce\"))\n",
-    "    .assign(date=lambda df: pd.to_datetime(df[\"date\"]).dt.to_period(\"M\").dt.to_timestamp()) # Drops the day info\n",
+    "    .assign(date = lambda df: pd.to_datetime(df[\"date\"]).dt.to_period(\"M\").dt.to_timestamp()) # Drops the day info\n",
     "    .assign(date = lambda df: df[\"date\"].astype(str))\n",
     "    .assign(new_col = lambda df: df[\"col\"].apply(\n",
     "        lambda row: len(row))\n",
@@ -113,6 +115,7 @@
     "            \"old_name\": \"new_name\",\n",
     "        }\n",
     "    )\n",
+    "    .rename(columns = lambda col: col.replace(\" \", \"_\"))\n",
     "    .drop(\n",
     "        [\n",
     "            \"col_to_drop\",\n",
@@ -123,13 +126,15 @@
     "    .astype(int)\n",
     "    [[\"col_1\", \"col_3\"]]\n",
     "    .tail()\n",
+    "    .describe(include=object)\n",
     ")\n",
     "\n",
     "dfs_to_concat.append(df_to_concat)\n",
     "\n",
     "dfs_concatenated = pd.concat(dfs_to_concat, axis=0, ignore_index=True)\n",
     "\n",
-    "pd.json_normalize(df[\"col\"]) # https://stackoverflow.com/questions/38231591/split-explode-a-column-of-dictionaries-into-separate-columns-with-pandas"
+    "exploded_df = pd.json_normalize(df[\"col\"]) # https://stackoverflow.com/questions/38231591/split-explode-a-column-of-dictionaries-into-separate-columns-with-pandas\n",
+    "result = pd.concat([df[['col1', 'col2']], exploded_df], axis=1)"
    ]
   },
   {
@@ -194,6 +199,8 @@
     "        },\n",
     "        \"x\": 0.5\n",
     "    },\n",
+    "    \"xaxis_title\": \"MAPE\",\n",
+    "    \"yaxis_title\": \"Count\",\n",
     "    \"font\": {\n",
     "        \"size\": 20\n",
     "    },\n",
@@ -206,6 +213,18 @@
     "        df[\"date\"].max()\n",
     "    ],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_profiling import ProfileReport\n",
+    "\n",
+    "profile = ProfileReport(df, title=\"Profile Dados Marketing\")\n",
+    "profile"
    ]
   },
   {
@@ -248,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.11 (default, Aug  6 2021, 09:57:55) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
