--- a/Data_Scientist/DS_and_ML.ipynb
+++ b/Data_Scientist/DS_and_ML.ipynb
@@ -102,7 +102,9 @@
     "        lambda row: len(row))\n",
     "    )\n",
     "    .assign(\n",
-    "        bonus = lambda df: df.apply(lambda row: row[\"salary\"] if (row[\"employee_id\"] % 2 != 0) and (row[\"name\"][0] != \"M\") else 0, axis=1)\n",
+    "        bonus = lambda df: df.apply(\n",
+    "            lambda row: row[\"salary\"] if (row[\"employee_id\"] % 2 != 0) and (row[\"name\"][0] != \"M\") else 0, axis=1\n",
+    "        )\n",
     "    )\n",
     "    .assign(**{col_as_variable : lambda df: df[col].shift(i)})\n",
     "    .sort_values([\"date\"])\n",
